--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">Citas Josema</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <!-- empty fragment -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="iniciar">Iniciar</string>
-    <string name="mis_citas_celebres">Mis Citas Célebres</string>
+    <!-- welcome fragment -->
+    <string name="text_main_start_button">Iniciar</string>
+    <string name="text_main_title_textView">Mis Citas Célebres</string>
 </resources>
